REFACTOR: Se unifica estilo AutoCompleteView

--- a/AppTFG/app/src/main/res/drawable/ic_receta.xml
+++ b/AppTFG/app/src/main/res/drawable/ic_receta.xml
@@ -5,32 +5,32 @@
     android:viewportHeight="2666.7">
   <path
       android:pathData="M0,2666.7L4266.7,2666.7L4266.7,0L0,0Z"
-      android:fillColor="#ffffff"
+      android:fillColor="#00FFFFFF"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m467.5,2378.9c0,-0 -537,-1269.5 618,-1505.5 720.7,-147.3 701.9,-659.2 1721.7,-624.3 1044.3,35.8 633.1,1022.4 768.6,1248.1C3711.3,1722.9 4059,1813.5 3932.9,2378.9L467.5,2378.9"
-      android:fillColor="#ebf3fa"
+      android:fillColor="#dedeed"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m2926.9,523.9c-37.1,-83.5 -180,-33.6 -180,-33.6 0,-0 -76.4,168 -104.9,176.1 -28.5,8.1 37.3,-156.4 37.3,-156.4 -57.1,3.2 -190,94.4 -190,94.4 0,-0 36.5,176.6 6.9,177.5 -29.6,0.9 -24.4,-158 -24.4,-158 -52,24.7 -93,96.2 -93,96.2 -47.6,113.3 100.4,168.6 100.4,168.6 0,-0 11.3,61.5 -15.9,138.2l0,-0c0,-0 -6.6,14.4 -11.9,38l14.9,-2.3c0.6,-4.2 1.3,-8.2 2.3,-12.1l0,-0.1 0,-0.2c0.7,-2.5 1.6,-5.9 2.8,-10.2l0,-0l0,-0c3.2,-9.6 5.2,-16.6 6.4,-21.7l0,-0.1c9.3,-30 23.3,-69.3 35.2,-79 0,-0 -2,-2.1 -4.2,-6.3 1.3,2 2.8,4.1 4.2,6.3 33.8,50.6 162.4,40.1 231,14.6 68.6,-25.5 34.6,-40.7 -8.5,-67.2 -43.1,-26.5 -121.7,-5.7 -147.3,-14.8 -25.6,-9.1 7,-27.1 54.8,-30.7 47.8,-3.7 78.7,39.9 156.1,35.4 77.4,-4.5 113.4,-157 113.4,-157 -50.2,24.5 -149.1,10 -155.5,-7.6 -6.4,-17.6 133.7,-37.3 154.7,-46.2 20.9,-8.8 52.4,-58.3 15.3,-141.8"
-      android:fillColor="#dfebfd"
+      android:fillColor="#cccceb"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m3341.5,1969.8c132.9,-79.4 19.7,-309.6 19.7,-309.6 0,-0 -298.1,-94.1 -317.6,-140.4 -19.5,-46.3 270.6,30.7 270.6,30.7 -17.1,-95.5 -197.6,-300.3 -197.6,-300.3 0,-0 -289.6,97.5 -297.1,47.9 -7.5,-49.7 260.8,-73.3 260.8,-73.3 -52.2,-82.4 -180.7,-136.8 -180.7,-136.8 -200.4,-56.9 -263.1,203.3 -263.1,203.3 0,-0 -101.1,31.6 -235.7,1.5l0,-0c0,-0 -25.6,-8.1 -66.3,-12.3l6.9,24.5c7.1,0.1 14.1,0.6 20.9,1.3l0.1,0 0.3,0c4.3,0.6 10.3,1.5 17.7,2.7l0,0l0,-0c16.8,3.4 29,5.4 37.7,6.4l0.1,0c52.3,9.5 121.4,25 140,43 0,-0 3.1,-3.8 9.8,-8.4 -3.1,2.7 -6.4,5.5 -9.8,8.4 -78.1,67.2 -34.2,281.3 22.7,391.5 56.8,110.2 75.5,49.9 111.3,-28 35.8,-78 -15.3,-205.9 -5.3,-250.8 10,-44.9 47,6.2 62.9,85.8 15.9,79.6 -51.1,140.5 -27.7,269.8 23.4,129.3 287.2,158.7 287.2,158.7 -51.4,-79.4 -47.2,-248.7 -18.9,-263.1 28.3,-14.4 90.1,217.3 109.3,250.7 19.1,33.5 108.7,76.2 241.7,-3.2"
-      android:fillColor="#dfebfd"
+      android:fillColor="#cccceb"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m1370.5,1037.7c74.5,-107.4 261.8,1.1 261.8,1.1 0,-0 62.2,256.4 100.1,275.5 37.9,19 -10.4,-229.6 -10.4,-229.6 79.4,19.9 241.6,183.5 241.6,183.5 0,-0 -98.7,238.3 -57.3,247.4 41.4,9.1 76.6,-215.4 76.6,-215.4 66.4,48.7 104.9,160 104.9,160 36.5,172 -186.2,209.9 -186.2,209.9 0,-0 -32.4,83.3 -14.8,198.4l0,-0c0,-0 5.4,22 6.5,56.6l-20.3,-7.2c0.3,-6 0.3,-11.9 0.1,-17.7l-0,-0.1 -0,-0.2c-0.3,-3.6 -0.7,-8.8 -1.2,-15.1l0,-0 0,-0c-1.9,-14.3 -2.9,-24.7 -3.2,-32.1l0,-0.1c-5,-44.6 -14.1,-103.7 -28.2,-120.4 0,-0 3.4,-2.4 7.6,-7.7 -2.4,2.5 -5,5 -7.6,7.7 -61.1,62 -238.8,12.7 -328.3,-41.5 -89.5,-54.1 -37.7,-66.4 30,-92.1 38.9,-14.8 90.1,-4.4 133.9,6 32.4,7.7 60.7,15.3 77,12.8 38.4,-5.9 -2.5,-40 -68.7,-57.9 -31.1,-8.4 -59.7,-1.2 -92.5,6 -37,8.1 -79.3,16.3 -136.3,1.9 -107.5,-27.1 -117.2,-250.9 -117.2,-250.9 63.9,47.8 206.7,54 220.5,31 13.7,-23 -177.8,-88.3 -204.9,-106.3 -27.1,-18 -57.9,-95.9 16.5,-203.3"
-      android:fillColor="#cde0fb"
+      android:fillColor="#cccceb"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m2726.3,1197.9c-0.3,-0.6 -0.5,-1.2 -0.9,-1.9 -1.2,-4.6 -11.5,-28.9 -12.6,-31.5 -3.2,-7.6 -8.5,-3.5 -8.5,2.1 0,1.7 0.7,14.2 0.3,16 -8.7,-6.4 -14.1,-13.1 -36.6,-19.5 0,-0 -17.2,-5.7 -8.9,11.7 5.5,11.6 12.1,13 20.1,29.2 8,16.2 22.9,27.3 36.2,26.3l14.3,4.8 14.4,-21.3 -9.3,-5.7c-3.9,-2.4 -6.8,-6 -8.5,-10.2"
-      android:fillColor="#ffb27d"
+      android:fillColor="#EBDFC1"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
@@ -130,7 +130,7 @@
       android:fillType="nonZero"/>
   <path
       android:pathData="m3071.7,1159.9c0,-0 71.1,272.4 -145.1,227.1 -58.4,-12.2 -213.9,-167.2 -213.9,-167.2 0,-0 15,-23.6 33.4,-21.1 0,-0 150.2,48.9 174.3,66.5 13.3,9.8 28.5,-144.5 74.5,-142.3 46,2.2 76.8,37 76.8,37"
-      android:fillColor="#91cecf"
+      android:fillColor="#B506B2A2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
@@ -140,7 +140,7 @@
       android:fillType="nonZero"/>
   <path
       android:pathData="m3173.7,2316.2c0,-0 -23.8,7.9 -42.3,7.9 -20.7,-0 -39.5,-5.6 -39.5,-5.6 0,-0 -4.5,-43.3 -29.1,-138.6 -12.9,-49.9 -31.3,-114.2 -57.5,-194 -72.5,-220.6 -94.5,-349.6 -96.5,-361.8 -0.1,-0.6 -0.1,-1 -0.1,-1l0.2,-0.1 222.9,-97.9c0,-0 -27.5,304 7.6,420.7 4.9,16.3 9.1,35.3 12.8,55.9 22.2,126.7 21.7,314.4 21.7,314.4"
-      android:fillColor="#2b478b"
+      android:fillColor="@color/azul_electrico"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
@@ -150,22 +150,22 @@
       android:fillType="nonZero"/>
   <path
       android:pathData="m2995.1,2311.7c0,-0 -4,64.1 -16.4,65 -1.7,0.1 -62.9,0.1 -62.9,0.1l-78.1,-0.5c0,-0 0.5,-18.8 23.3,-22.8 22.9,-4 61.1,-20 74.9,-50.2 14.6,-31.8 59.1,8.4 59.1,8.4"
-      android:fillColor="#163560"
+      android:fillColor="#1A4683"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m2868.7,1532.4c0,-0 -2.9,197 31.2,438.9 34.1,241.9 22.5,344.5 22.5,344.5 0,-0 23.4,7.6 32.9,8.4 24.1,2 48.8,-5.7 48.8,-5.7 0,-0 48.8,-241.9 34.8,-363 -14,-121.1 66.8,-415.4 66.8,-415.4l-236.9,-7.7"
-      android:fillColor="#2b478b"
+      android:fillColor="@color/azul_electrico"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m3031.1,1063.6 l-39.1,34.3 -63.9,-2.8c0.1,-5.1 1.3,-26.5 2.4,-45.9 0.1,-1.1 0.1,-2.3 0.2,-3.4 0.9,-16.5 1.8,-30.7 1.8,-30.7l54.5,-33.9 20.3,-12.6c0,0.3 0.8,18 1,20.6 2.3,45.9 22.8,74.4 22.8,74.4"
-      android:fillColor="#ffb27d"
+      android:fillColor="#ffc7b2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m2855.7,1540.9c0.9,104 7.8,347.2 12.9,352.2 54.2,52.3 292.4,-14.3 305,-71.9 12.6,-57.6 -48,-738.4 -140.5,-765.6 -19.2,-5.6 -121.8,27.5 -121.8,27.5 0,-0 -16.1,42.1 -26.6,95.7 -3.9,19.9 -16.7,161.7 -24.1,256.5 -2,25.3 -3.6,47.2 -4.5,62.5 -0.4,6.3 -0.5,21.8 -0.3,43.1"
-      android:fillColor="#abddda"
+      android:fillColor="@color/turquesa"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
@@ -175,7 +175,7 @@
       android:fillType="nonZero"/>
   <path
       android:pathData="m2912.3,1017.4c0,-0 98.6,9.2 103.4,-52.3 4.8,-61.5 20.7,-101.8 -42.1,-110.2 -62.8,-8.5 -76.8,14.1 -83.4,34.2 -6.6,20.1 -3.4,124.4 22.1,128.3"
-      android:fillColor="#ffb27d"
+      android:fillColor="#ffc7b2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
@@ -185,22 +185,22 @@
       android:fillType="nonZero"/>
   <path
       android:pathData="m2936.5,1057c1.2,-0.5 70.4,-31.5 78.5,-28.9 8.1,2.7 18.2,27.4 18.2,27.4l-121.8,27.5c0,-0 9.6,-19.5 25.1,-26"
-      android:fillColor="#91cecf"
+      android:fillColor="#B506B2A2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m2855.7,1615.4c185.3,-134 199.8,-346.5 199.8,-346.5 -88.2,49.7 -171.9,132 -199.1,222.4 -2,25.3 0.6,65.6 -0.4,81 -0.4,6.4 -0.5,21.8 -0.3,43.1"
-      android:fillColor="#91cecf"
+      android:fillColor="#B506B2A2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m2739.4,1546.8c0,-0 -2.3,-1.9 -7.5,-2.3 -4.5,-1.5 -17,-7 -19.1,-8.9 -6.8,-6.2 -9.2,0.4 -4.4,6.9 1,1.4 4.7,3.8 6,5.2 -10.1,3.8 -23.7,11.7 -41.3,27.2 0,-0 -14.1,11.3 4.9,13.8 12.7,1.7 17.5,-3.1 35.5,-1 18,2.1 35.4,-4.4 41.8,-16.1l11.8,-9.4 -10.1,-23.7 -17.6,8.3"
-      android:fillColor="#ffb27d"
+      android:fillColor="#ffc7b2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m2976.8,1088c0,-0 195.2,-9.4 18.7,319.1 -28.2,52.5 -230,166.7 -230,166.7 0,-0 -19,-20.5 -11.8,-37.7 0,-0 131.4,-149.5 149,-155.6 15.6,-5.4 12.4,-187.4 26.4,-231.3 14,-43.9 47.8,-61.1 47.8,-61.1"
-      android:fillColor="#abddda"
+      android:fillColor="@color/turquesa"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <group>
@@ -489,7 +489,7 @@
       android:fillType="nonZero"/>
   <path
       android:pathData="m1166.9,1523.1c-12.1,-38.7 -64.5,-46 -85.5,-11.3 -3.8,6.2 -6.2,13.4 -6.4,21.6 -1.2,45.4 88.3,221 100.2,236.5 21.6,28.3 152.1,96.3 152.1,96.3l27.7,-4c0,-0 -15.7,-9.9 -31.9,-26.1 -33.5,-33.5 -82.4,-87.9 -91.4,-95.4 -15.4,-12.9 -42,-144 -64.8,-217.5"
-      android:fillColor="#ed985f"
+      android:fillColor="#E5A68E"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
@@ -569,7 +569,7 @@
       android:fillType="nonZero"/>
   <path
       android:pathData="m1069.8,2342.1 l-26.6,-3.9c0,-0 -89.3,-71 -102.6,-203.5 -1.4,-13.5 -1.6,-27.2 -0.6,-41 0.1,-1.6 -0.1,-3.2 -0.9,-4.5l-0,-0c-2.9,-4.4 -10,-15.4 -19.6,-31 -9.5,-15.4 -25.8,-44.5 -43.6,-77.1 -32.2,-58.8 -69.7,-129.1 -82.6,-151.5 -41,-71.4 -21.2,-119.3 -21.2,-119.3 0,-0 114.3,-11.3 145.7,-38.7l11.3,17.4c0,-0 24.8,109.7 23.6,110.2 1.2,3.7 2.5,7.5 3.7,11.4 19.6,60.3 42,135.8 54.3,197.2 6.9,34.6 10.5,64.7 8.6,85.2 -0.7,7 0.1,17.9 2,31.2 11.1,78.7 48.7,218 48.7,218"
-      android:fillColor="#2b478b"
+      android:fillColor="@color/azul_electrico"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
@@ -584,27 +584,27 @@
       android:fillType="nonZero"/>
   <path
       android:pathData="m878.5,1718.5 l0.4,-20.7c-41.3,5.2 -142.4,-49.4 -142.4,-49.4 0,-0 -43.2,28.7 -49.1,110.8 -2.9,40.1 -21.2,209.5 -23.2,260.1 -0.7,18.3 -1,31.4 -1.1,36.7l0,0.1c-0,1.6 -0.8,3 -1.8,4.3 -8.5,10.9 -16,22.4 -22.4,34.3C575.9,2211.9 608.9,2371.2 608.9,2371.2l14.6,-3.7c0,-0 53.3,-165.2 88.1,-236.7 5.9,-12.1 11.3,-21.5 15.8,-27 13.1,-15.9 26.9,-42.9 40.5,-75.4 25.7,-61.5 50.7,-142.6 68.5,-205.4 1.3,0.2 42,-104.6 42,-104.6"
-      android:fillColor="#2b478b"
+      android:fillColor="@color/azul_electrico"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m1120.2,1580.1c-67.5,-15.5 -24.4,-110.4 -20.5,-108.7 9.4,-1.9 29.9,-18.3 48.3,-50.4L1150.5,1423.1 1192,1459.5c0,-0 -9.6,14.1 -17.7,28 -6.3,10.8 -11.7,21.5 -10.8,25.2 3.3,2.6 -25.3,71.6 -43.3,67.4"
-      android:fillColor="#ffb27d"
+      android:fillColor="#ffc7b2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m1162.9,1509.6c0,-0 11.9,23.4 18.2,43.7 6.3,20.3 22.2,84.8 22.2,84.8 0,-0 -32.7,37.3 -78.2,35.1 0,-0 -24.5,-38.3 -15.8,-72.8 8.6,-34.6 53.6,-90.9 53.6,-90.9"
-      android:fillColor="#91cecf"
+      android:fillColor="#B506B2A2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m1192,1459.5c0,-0 -9.6,14.1 -17.7,28 -25.8,-15.9 -25.8,-47.8 -23.8,-64.4l41.5,36.4"
-      android:fillColor="#ed985f"
+      android:fillColor="#ffc7b2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m1193.2,1477.7c0,-0 -62.6,-34.8 -40.3,-73.5 22.3,-38.7 29.2,-69.2 70.2,-48.6 40.9,20.6 40.1,39.8 35.8,54.5 -4.3,14.7 -48.8,75.6 -65.6,67.6"
-      android:fillColor="#ffb27d"
+      android:fillColor="#ffc7b2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
@@ -619,52 +619,52 @@
       android:fillType="nonZero"/>
   <path
       android:pathData="m1128.2,1655.3c-14.3,5 -34.3,7.7 -54.8,9.9 -29.2,3.2 -59.2,5.3 -75,11.7 -3.1,1.2 -12,5 -21,11.5l0,0c0,-0 -0.2,0.1 -0.6,0.5 -3,2.2 -6,4.7 -8.7,7.5 -4.2,4.3 -7.8,9.3 -10.2,15.1 -5.8,14.3 1.9,53.9 6.8,75.5 2,8.7 -2.1,17.7 -10.1,21.8 -11.1,5.7 -22,11 -32.7,15.9 -0.6,0.3 -1.1,0.5 -1.7,0.8 0.1,-2.2 0.1,-4.4 0.1,-6.5 0,-14.9 -1.9,-27.4 -1.9,-27.4 -2.6,15.1 -12.6,31.3 -21.8,43.9 -148.8,59.7 -252.7,33.7 -251,4 5.9,-103.2 75.5,-191.1 75.5,-191.1 129.9,-151 392.5,-190.8 392.5,-190.8 0,-0 12.6,-1.5 27.8,16.7 21.8,26.3 22.9,33.1 22.9,33.1 0,-0 5.8,133.2 -36.2,147.9"
-      android:fillColor="#abddda"
+      android:fillColor="@color/turquesa"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m1073.4,1665.3c-29.1,3.2 -59.2,5.4 -75,11.6 -6.4,-96.3 39,-168.7 39,-168.7 0,-0 29.6,120.6 36,157"
-      android:fillColor="#91cecf"
+      android:fillColor="#B506B2A2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m1104,1489.6c0,-0 -73.1,7.2 -78.9,54.7 -5.9,47.5 70,240.8 80.9,258.3 19.8,31.9 136.3,141.1 136.3,141.1l21.5,-13c0,-0 -82.6,-139.9 -95.4,-153 -20.1,-20.6 -39.6,-271.7 -64.3,-288.1"
-      android:fillColor="#ffb27d"
+      android:fillColor="#ffc7b2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m1141.5,1580.3c0,-0 7.5,-122.4 -86.2,-92.8 -93.7,29.6 14.5,240.1 14.5,240.1 0,-0 55,-2.7 74.5,-50.7l-2.8,-96.6"
-      android:fillColor="#abddda"
+      android:fillColor="@color/turquesa"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m964.7,1787c2,8.7 -2.1,17.7 -10.1,21.8 -11.1,5.7 -22,11 -32.7,15.9 -0.6,-1.8 -1.1,-3.7 -1.5,-5.8 -1.7,-7.5 -2.5,-16.6 -1.9,-27.4 2.5,-45.7 33.6,-80.3 49.6,-95.2 -4.2,4.3 -7.8,9.3 -10.2,15.1 -5.8,14.3 1.9,53.9 6.8,75.5"
-      android:fillColor="#91cecf"
+      android:fillColor="#B506B2A2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m1113.7,1457.6c0,-0 11.4,-14.5 19.2,-14 0,-0 31.3,43.8 31.5,63.8 0,-0 -39,-51.9 -50.7,-49.9"
-      android:fillColor="#91cecf"
+      android:fillColor="#B506B2A2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m1413.6,1881.1c0,-0 -16.6,0.3 -20.2,-0.2 -3.5,-0.5 -8.2,-2 -13,-2.2 -4.7,-0.2 -8.9,1.3 -13.3,2.2 -0.7,0.1 -1.3,0.2 -2,0.2l-27.6,-0c0,-0 -2.8,-1.3 -5.8,-6.2 -1.3,-2.1 -1.5,-7.1 -4.5,-8.8 -16.7,-9.3 27.7,-4 27.7,-4 0,-0 27.9,-0.5 30.5,1.4 4.6,3.5 29.1,16.3 28.1,17.6"
-      android:fillColor="#ed985f"
+      android:fillColor="#ffc7b2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m1337.6,1881.1c0,-0 16.9,4.9 21.5,8l4.9,3.1c0,-0 2.8,-3.1 -1.6,-6.6 -2.3,-1.8 -8.8,-7.2 -9,-13.4 -0.2,-6.2 -19.3,-0.8 -15.8,8.9"
-      android:fillColor="#ed985f"
+      android:fillColor="#ffc7b2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m1263.8,1930.7c0,-0 12.1,10.7 21.3,13 9.2,2.3 19.7,28.6 21.3,32.4 1.7,3.8 -8.8,-1.7 -13,-8.1 -4.2,-6.4 -7,-8.9 -8.3,-7.5 -1.2,1.4 0.7,19 7.7,28.7 7,9.7 11.2,18.4 6.1,17.8 -5,-0.6 -34.8,-7.8 -41,-25.9 -6.1,-18.1 -1.6,-18.7 -15.7,-37.4 -14.1,-18.6 21.5,-13 21.5,-13"
-      android:fillColor="#ffb27d"
+      android:fillColor="#ffc7b2"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
       android:pathData="m2598.1,2336.8c0,10.5 -4.3,20 -11.2,26.9 -6.9,6.9 -16.5,11.2 -26.9,11.2l-180.2,-0c-21,-0 -38.1,-17.2 -38.1,-38.1 0,-10.5 4.3,-20 11.2,-26.9 6.9,-6.9 16.5,-11.2 26.9,-11.2l180.2,-0c21,-0 38.1,17.2 38.1,38.1"
-      android:fillColor="#2b478b"
+      android:fillColor="@color/azul_electrico"
       android:strokeColor="#00000000"
       android:fillType="nonZero"/>
   <path
