--- a/AppTFG/app/src/main/res/layout/activity_hospital.xml
+++ b/AppTFG/app/src/main/res/layout/activity_hospital.xml
@@ -36,7 +36,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/customerSpinnerLayout"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                    style="@style/TextInputLayout.AutoCompleteTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_row="1"
