--- a/AppTFG/app/src/main/res/layout/bottom_sheet_farmaco_secundario_form.xml
+++ b/AppTFG/app/src/main/res/layout/bottom_sheet_farmaco_secundario_form.xml
@@ -43,7 +43,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_nombre_fs"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+        style="@style/TextInputLayout.AutoCompleteTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -79,7 +79,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+        style="@style/TextInputLayout.AutoCompleteTextView"
         android:dropDownSelector="@color/turquesa"
         android:completionHint="Seleccione presentacion"
         android:textColorHint="@color/azul_electrico"
