--- a/AppTFG/app/src/main/res/layout/fragment_dosimetro.xml
+++ b/AppTFG/app/src/main/res/layout/fragment_dosimetro.xml
@@ -60,7 +60,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/til_nombre_fd_dosimetro"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                        style="@style/TextInputLayout.AutoCompleteTextView"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
@@ -163,7 +163,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/til_nombre_fs_dosimetro"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                        style="@style/TextInputLayout.AutoCompleteTextView"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
