--- a/AppTFG/app/src/main/res/layout/fragment_step_farmaco_dominante.xml
+++ b/AppTFG/app/src/main/res/layout/fragment_step_farmaco_dominante.xml
@@ -28,7 +28,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_nombre_fd"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+        style="@style/TextInputLayout.AutoCompleteTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -64,7 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+        style="@style/TextInputLayout.AutoCompleteTextView"
         android:dropDownSelector="@color/turquesa"
         android:completionHint="Seleccione presentacion"
         android:textColorHint="@color/azul_electrico"
