--- a/AppTFG/app/src/main/res/layout/fragment_catalogo.xml
+++ b/AppTFG/app/src/main/res/layout/fragment_catalogo.xml
@@ -30,17 +30,19 @@
             android:layout_height="match_parent"
             android:textSize="30sp" />
     </androidx.cardview.widget.CardView>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/sw_contenedor_lista"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:scrollIndicators="right"
         android:fadeScrollbars="false"
         android:scrollbarAlwaysDrawVerticalTrack="true"
         android:scrollbarFadeDuration="50000"
-        android:scrollbarSize="8dp"
         android:scrollbarStyle="outsideInset"
-        android:scrollbarThumbVertical="@color/gris_claro"
+        android:scrollbarSize="10dp"
+        android:scrollbarThumbVertical="@color/azul_electrico"
         android:scrollbars="vertical"
         app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toBottomOf="parent"
